--- a/TwitterLogin/app/build.gradle
+++ b/TwitterLogin/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.3"
     defaultConfig {
-        applicationId "gamebegin.twitterlogin"
+        applicationId "com.test.twitterlogin"
         minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 
-    //twitterÌí¼ÓÕâ¸ö
+    //twitteræ·»åŠ è¿™ä¸ª
     compile 'com.twitter.sdk.android:twitter-core:3.1.1'
 
 }
